--- a/config.env
+++ b/config.env
@@ -7,3 +7,8 @@ DB_PASSWORD=Ddg5-8u-!Hx2wgs
 
 jWT_SECRET=my-32-character-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=72aaced45c79a7
+EMAIL_PASSWORD=c3457371902996
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
