--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.12.0",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.5.0",
 		"nodemon": "^2.0.7",
 		"slugify": "^1.3.4",
 		"validator": "^10.11.0"
