--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-PORT=3000
+PORT=8000
 DB_ATLAS=mongodb+srv://admin:<password>@cluster0.di3ga.mongodb.net/node?retryWrites=true&w=majority
 DB_LOCAL=mongodb://localhost:27017/node
 DB_USER=user
@@ -7,6 +7,7 @@ DB_PASSWORD=Ddg5-8u-!Hx2wgs
 
 jWT_SECRET=my-32-character-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=72aaced45c79a7
 EMAIL_PASSWORD=c3457371902996
