--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
 		"crypto": "^1.0.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-mongo-sanitize": "^2.0.2",
+		"express-rate-limit": "^5.2.6",
+		"helmet": "^4.4.1",
+		"hpp": "^0.2.3",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.12.0",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.5.0",
 		"nodemon": "^2.0.7",
 		"slugify": "^1.3.4",
-		"validator": "^10.11.0"
+		"validator": "^10.11.0",
+		"xss-clean": "^0.1.1"
 	},
 	"devDependencies": {
 		"eslint": "^5.16.0",
