--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"start:dev": "nodemon server.js",
 		"start:prod": "set NODE_ENV=production&&nodemon server.js",
-		"debug": "ndb server.js"
+		"debug": "ndb server.js",
+		"import:tours": "node ./dev-data/data/import-tours.js --delete&&node ./dev-data/data/import-tours.js --import",
+		"import:users": "node ./dev-data/data/import-users.js --delete&&node ./dev-data/data/import-users.js --import"
 	},
 	"author": "",
 	"license": "ISC",
